--- a/index.html
+++ b/index.html
@@ -1,52 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Contact form</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./assets/images/favicon-32x32.png"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<title>Frontend Mentor | Contact form</title>
+	</head>
+	<body>
+		<main>
+			<form action="">
+				<h1>Contact Us</h1>
+				<div>
+					First Name
+					<input type="text" /><span>This field is required</span>
+				</div>
+				<div>
+					Last Name<input type="text" /><span
+						>This field is required</span
+					>
+				</div>
+				<div>
+					Email Address<input type="text" /><span
+						>Please enter a valid email address</span
+					>
+					<span>This field is required</span>
+				</div>
+				<div>
+					Query Type<input
+						type="radio"
+						title="General Enquiry"
+					/><input type="radio" title="Support Request" /><span
+						>Please select a query type</span
+					>
+				</div>
+				<div>
+					Message<input type="text" />
+					<span>This field is required</span>
+				</div>
+				<div>
+					<input type="checkbox" name="consent" id="" />I consent to
+					being contacted by the team
+					<span
+						>To submit this form, please consent to being
+						contacted</span
+					>
+				</div>
+				<button type="submit">Submit</button>
+			</form>
+		</main>
 
-  Contact Us
-
-  First Name
-  This field is required
-
-  Last Name
-  This field is required
-
-  Email Address
-  Please enter a valid email address
-  This field is required
-
-  Query Type
-  General Enquiry
-  Support Request
-  Please select a query type
-
-  Message
-  This field is required
-
-  I consent to being contacted by the team
-  To submit this form, please consent to being contacted
-
-  Submit
-
-  Message Sent!
-  Thanks for completing the form. We'll be in touch soon!
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+		Message Sent! Thanks for completing the form. We'll be in touch soon!
+	</body>
 </html>
