finished desktop css

--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
 					<span>This field is required</span>
 				</div>
 				<div>
-					<input type="checkbox" name="consent" id="consent" /><label
-						for="consent"
-						>I consent to being contacted by the team</label
-					>
+					<article>
+						<input type="checkbox" name="consent" id="consent" />
+						<label for="consent"
+							>I consent to being contacted by the team</label
+						>
+					</article>
+
 					<span
 						>To submit this form, please consent to being
 						contacted</span
@@ -81,6 +84,9 @@
 			</form>
 		</main>
 
-		Message Sent! Thanks for completing the form. We'll be in touch soon!
+		<span
+			>Message Sent! Thanks for completing the form. We'll be in touch
+			soon!</span
+		>
 	</body>
 </html>
